test-cases/negative/test_089_missing_return_statement.lay
# negative test: function with return type but no return
# expected: type checker should catch this

define function add that takes x and y and returns Number
  the variable result of type Number is x plus y


